--- a/my-haproxy/Dockerfile
+++ b/my-haproxy/Dockerfile
@@ -4,10 +4,9 @@ WORKDIR /
 
 ADD haproxy.cfg /usr/local/etc/haproxy/haproxy.cfg
 
+ADD cloudflare.pem /etc/ssl/certs/cloudflare.pem
+
 EXPOSE 80
 EXPOSE 443
 
 CMD haproxy -f /usr/local/etc/haproxy/haproxy.cfg
-
-# haproxy -f /usr/local/etc/haproxy/haproxy.cfg
-
