--- a/my-haproxy/haproxy.cfg
+++ b/my-haproxy/haproxy.cfg
@@ -8,20 +8,24 @@ defaults
 #Application Setup
 frontend ContentSwitching
   bind *:80
+  bind *:443 ssl crt /etc/ssl/certs/cloudflare.pem
   mode  http
   option httplog
-  acl host_sub2 hdr(host) -i sub2.tmmworkshop.com
-  acl host_sub3 hdr(host) -i sub3.tmmworkshop.com
-  use_backend sub2_nodes if host_sub2
-  use_backend sub3_nodes if host_sub3
+  acl host_www hdr(host) -i www.tmmworkshop.com
+  acl host_mirror hdr(host) -i mirror.tmmworkshop.com
+  acl host_dndrules hdr(host) -i dndrules.tmmworkshop.com
+  use_backend www_nodes if host_www
+  use_backend mirror_nodes if host_mirror
+  use_backend dndrules_nodes if host_dndrules
 
-backend myservers
-  server server1 192.168.99.25:5000
-
-backend sub2_nodes
+backend www_nodes
   mode http
-  server server1 192.168.99.25:5000
+  server server1 website:5000
 
-backend sub3_nodes
+backend mirror_nodes
   mode http
-  server server1 192.168.99.40:800
+  server server2 arch_mirror:80
+
+backend dndrules_nodes
+  mode http
+  server server1 dnd_file_server:80
