added graildata foundry Paths to haproxy.cfg

--- a/my-haproxy/haproxy.cfg
+++ b/my-haproxy/haproxy.cfg
@@ -14,10 +14,14 @@ frontend ContentSwitching
   acl host_www hdr(host) -i www.tmmworkshop.com
   acl host_mirror hdr(host) -i mirror.tmmworkshop.com
   acl host_dndrules hdr(host) -i dndrules.tmmworkshop.com
+  acl host_dnd hdr(host) -i dnd.tmmworkshop.com
+  acl host_graildata hdr(host) -i graildata.tmmworkshop.com
   use_backend www_nodes if host_www
   use_backend mirror_nodes if host_mirror
   use_backend dndrules_nodes if host_dndrules
-
+  use_backend dnd_nodes if host_dnd
+  use_backend graildata_nodes if host_graildata
+  
 backend www_nodes
   mode http
   server server1 website:5000
@@ -26,6 +30,15 @@ backend mirror_nodes
   mode http
   server server2 arch_mirror:80
 
+backend graildata_nodes
+  mode http
+  server server1 graildata:80
+
 backend dndrules_nodes
   mode http
   server server1 dnd_file_server:80
+
+backend dnd_nodes
+  mode http
+  server server1 foundry:30000
+
