--- a/my-haproxy/haproxy.cfg
+++ b/my-haproxy/haproxy.cfg
@@ -24,21 +24,21 @@ frontend ContentSwitching
   
 backend www_nodes
   mode http
-  server server1 website:5000
+  server server website:5000
 
 backend mirror_nodes
   mode http
-  server server2 arch_mirror:80
+  server server arch_mirror:80
 
 backend graildata_nodes
   mode http
-  server server1 graildata:80
+  server server graildata:80
 
 backend dndrules_nodes
   mode http
-  server server1 dnd_file_server:80
+  server server dnd_file_server:80
 
 backend dnd_nodes
   mode http
-  server server1 foundry:30000
-
+  server server foundry:30000
+  acl host_www hdr(host) -i www.tmmworkshop.com
