--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
         uses: actions/checkout@v2
 
       # Add your build steps here
-      
+
   deploy:
     needs: build
     runs-on: ubuntu-latest
@@ -33,4 +33,7 @@ jobs:
           username: ${{ secrets.SERVER_USER }}
           key: ${{ secrets.SERVER_SSH_KEY }}
           port: ${{ secrets.SERVER_SSH_PORT }}
-          script: ls
+          script: git -C /ZFS/Main/Docker/Docker pull
+          envs: |
+            TUNNEL_TOKEN=${{ secrets.JEEVES_JR_TUNNEL_TOKEN }}
+
