--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,5 +38,5 @@ jobs:
           port: ${{ secrets.SERVER_SSH_PORT }}
           script: |
             git -C /ZFS/Main/Docker/Docker pull
-            python3 /ZFS/Main/Docker/Docker/docker_update.py
+            python3 /ZFS/Main/Docker/Docker/docker_update.py --machine_name jeeves-jr
           envs: TUNNEL_TOKEN
