--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,6 +48,9 @@ jobs:
 
       - name: Deploy to jeeves
         uses: appleboy/ssh-action@master
+        env:
+          POSTGRES_USER: ${{ secrets.POSTGRES_USER }}
+          POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
 
         with:
           host: ${{ secrets.JEEVES_IP }}
@@ -57,3 +60,4 @@ jobs:
           script: |
             git -C /ZFS/Media/Docker/Docker pull
             python3 /ZFS/Media/Docker/Docker/scripts/docker_update.py --machine_name jeeves
+          envs: POSTGRES_USER, POSTGRES_PASSWORD
