testing paths-ignore

--- a/.github/workflows/jeeves_deploy.yml
+++ b/.github/workflows/jeeves_deploy.yml
@@ -3,13 +3,13 @@ on:
   push:
     branches:
       - main
-    paths:
-      - "!jeeves-jr/**"
+    paths-ignore:
+      - "jeeves-jr/**"
   pull_request:
     branches:
       - main
-    paths:
-      - "!jeeves-jr/**"
+    paths-ignore:
+      - "jeeves-jr/**"
 
 jobs:
   build:
