--- a/.github/workflows/jeeves-jr_deploy.yml
+++ b/.github/workflows/jeeves-jr_deploy.yml
@@ -3,13 +3,13 @@ on:
   push:
     branches:
       - main
-    paths:
-      - "!jeeves/**"
+    paths-ignore:
+      - "jeeves/**"
   pull_request:
     branches:
       - main
-    paths:
-      - "!jeeves/**"
+    paths-ignore:
+      - "jeeves/**"
 
 jobs:
   build:
