test github actions

--- a/templates/file_server/sites/000-default.conf
+++ b/templates/file_server/sites/000-default.conf
@@ -10,8 +10,7 @@
 
   ErrorLog ${APACHE_LOG_DIR}/error.log
 
-  # Possible values include: debug, info, notice, warn, error, crit,
-  # alert, emerg.
+  # Possible values include: debug, info, notice, warn, error, crit, alert, emerg.
   LogLevel warn
 
   CustomLog ${APACHE_LOG_DIR}/access.log combined
