--- a/.github/workflows/jeeves_deploy.yml
+++ b/.github/workflows/jeeves_deploy.yml
@@ -34,7 +34,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: ZeroTier
-        uses: zerotier/github-action@v1
+        uses: zerotier/github-action@main
         with:
           network_id: ${{ secrets.ZEROTIER_NETWORK_ID }}
           auth_token: ${{ secrets.ZEROTIER_CENTRAL_TOKEN }}
