adding env vars

--- a/.github/workflows/jeeves_deploy.yml
+++ b/.github/workflows/jeeves_deploy.yml
@@ -45,6 +45,9 @@ jobs:
           POSTGRES_USER: ${{ secrets.POSTGRES_USER }}
           POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
           TUNNEL_TOKEN: ${{ secrets.JEEVES_TUNNEL_TOKEN }}
+          PIA_USERNAME: ${{ secrets.PIA_USERNAME }}
+          PIA_PASSWORD: ${{ secrets.PIA_PASSWORD }}
+          LAN_NETWORK: ${{ secrets.LAN_NETWORK }}
 
         with:
           host: ${{ secrets.JEEVES_IP }}
@@ -54,4 +57,4 @@ jobs:
           script: |
             git -C /ZFS/Media/Docker/Docker pull
             python3 /ZFS/Media/Docker/Docker/scripts/docker_update.py --machine_name jeeves
-          envs: POSTGRES_USER, POSTGRES_PASSWORD, TUNNEL_TOKEN
+          envs: POSTGRES_USER, POSTGRES_PASSWORD, TUNNEL_TOKEN, PIA_USERNAME, PIA_PASSWORD, LAN_NETWORK
