--- a/.github/workflows/jeeves-jr_deploy.yml
+++ b/.github/workflows/jeeves-jr_deploy.yml
@@ -7,6 +7,7 @@ on:
       - "jeeves-jr/**"
       - ".github/workflows/jeeves-jr_deploy.yml"
       - "templates/**"
+      - "scripts/**"
   pull_request:
     branches:
       - main
@@ -14,6 +15,7 @@ on:
       - "jeeves-jr/**"
       - ".github/workflows/jeeves-jr_deploy.yml"
       - "templates/**"
+      - "scripts/**"
 
 jobs:
   build:
